[package]
name = "知我"
version = "1.0.0"
description = "A blog+Todo App"
authors = ["wzy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
crypto-hash = "0.3.4"
aes = "0.8.3"
block-modes="0.8.1"
hex = "0.4.3"
hex-literal = "0.4.1"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
